interns/Malathi-Shetty/week-4/Project01-[DEVOPS]-MultiStage-CICD-Pipeline/kubernetes/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flavorforge-ingress
  namespace: flavorforge

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000


      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
